--- a/styles.css
+++ b/styles.css
@@ -39,17 +39,43 @@ header p {
     margin: 1rem 0;
 }
 
+/* Botão Agendar */
 .btn-agendar {
+    position: relative;
+    display: inline-block;
     background-color: #fff;
     color: #5f9ea0;
     padding: 0.8rem 1.5rem;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
+    overflow: hidden;
+    transition: color 0.4s ease;
+}
+
+.btn-agendar::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #488183;
+    transition: left 0.5s ease;
+    z-index: 0;
 }
 
 .btn-agendar:hover {
-    background-color: #eee;
+    color: #fff; /* Texto ficará branco quando o fundo preencher */
+}
+
+.btn-agendar:hover::before {
+    left: 0; /* Preenchimento da esquerda para a direita */
+}
+
+.btn-agendar span {
+    position: relative;
+    z-index: 1;
 }
 
 /* Redes sociais */
@@ -73,8 +99,12 @@ header p {
     color: #e1306c;
 }
 
-.linkedin {
+.facebook {
     color: #0a66c2;
+}
+
+.whatsapp {
+    color: #12d643;
 }
 
 /* Foto de perfil */
@@ -88,12 +118,7 @@ header p {
     height: 180px;
     border-radius: 50%;
     object-fit: cover;
-    border: 4px solid #239599;
-}
-
-.sobre, .servicos, .depoimentos {
-    padding: 3rem 0;
-    text-align: center;
+    border: 4px solid #488183;
 }
 
 .social-links {
@@ -103,6 +128,23 @@ header p {
 }
 
 
+.sobre, .servicos, .depoimentos {
+    padding: 3rem 0;
+    text-align: center;
+}
+
+/* Atualização da seção "Sobre" com fonte elegante */
+.sobre h2, .sobre p {
+    font-family: 'Playfair Display', serif; /* Fonte elegante para o título e o texto */
+}
+
+.sobre p {
+    font-size: 1.3rem; /* Ajuste o tamanho da fonte para uma leitura confortável */
+    line-height: 1.8;  /* Espaçamento entre as linhas */
+    color: #333; /* Cor do texto */
+}
+
+/* Títulos de seções */
 .sobre h2, .servicos h2, .depoimentos h2 {
     margin-bottom: 2rem;
     font-size: 2rem;
@@ -133,6 +175,16 @@ header p {
 /* Depoimentos */
 .depoimento {
     margin-bottom: 2rem;
+}
+
+/* Depoimentos */
+.depoimentos {
+    background-color: #f4f4f4;
+    border-radius: 3%;
+    margin: 40px auto; /* Centraliza horizontalmente e adiciona margem vertical */
+    width: 80%; /* Define uma largura para facilitar o centramento */
+    padding: 20px; /* Adiciona espaçamento interno */
+    text-align: center; /* Garante que o conteúdo dentro da seção também seja centralizado */
 }
 
 /* Footer */
